Parametros adicionados nas rotas de usuarios, artistas e contratantes